--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>test_ws</name>
+  <name>FetchVRbackend</name>
   <version>0.0.0</version>
-  <description>The test_ws package</description>
+  <description>The FetchVRbackend package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
