--- a/package.xml
+++ b/package.xml
@@ -54,16 +54,19 @@
   <build_depend>moveit_ros_planning_interface</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>control_msgs</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>actionlib</build_export_depend>
   <build_export_depend>moveit_ros_planning_interface</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
+  <build_export_depend>control_msgs</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>actionlib</exec_depend>
   <exec_depend>moveit_ros_planning_interface</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>control_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
