add ability to use mouse in terminals

--- a/config/study.tmux.conf
+++ b/config/study.tmux.conf
@@ -5,7 +5,7 @@ split-window -h
 
 # top left panel
 select-pane -L -T "Nav"
-send "roslaunch nav_config no-collision.launch" C-m
+send "roslaunch nav_config nerve_kitchen.launch" C-m
 split-window -v
 select-pane -T "Manip"
 send " roslaunch fetch_moveit_config move_group.launch" C-m
@@ -18,3 +18,8 @@ split-window -v
 select-pane -T "ESTOP"
 send "rostopic pub --once /enable_software_runstop std_msgs/Bool 'true'"
 
+set-option -g mouse on
+
+# make scrolling with wheels work
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
