revert map change to tmux loadout

--- a/config/study.tmux.conf
+++ b/config/study.tmux.conf
@@ -5,7 +5,7 @@ split-window -h
 
 # top left panel
 select-pane -L -T "Nav"
-send "roslaunch nav_config nerve_kitchen.launch" C-m
+send "roslaunch nav_config no-collision.launch" C-m
 split-window -v
 select-pane -T "Manip"
 send " roslaunch fetch_moveit_config move_group.launch" C-m
