add delay to backend startup

--- a/config/study.tmux.conf
+++ b/config/study.tmux.conf
@@ -13,7 +13,7 @@ send " roslaunch fetch_moveit_config move_group.launch" C-m
 # top right panel
 select-pane -R
 select-pane -T "Backend"
-send "roslaunch fetch_vr_backend backend.launch" C-m
+send "sleep 5 && roslaunch fetch_vr_backend backend.launch" C-m
 split-window -v
 select-pane -T "ESTOP"
 send "rostopic pub --once /enable_software_runstop std_msgs/Bool 'true'"
