update tmux layout

--- a/config/study.tmux.conf
+++ b/config/study.tmux.conf
@@ -1,5 +1,10 @@
 new-window
 
+split-window -v
+
+select-pane -D "ESTOP"
+send "rostopic pub --once /enable_software_runstop std_msgs/Bool 'true'"
+
 select-pane -U
 split-window -h
 
@@ -15,8 +20,9 @@ select-pane -R
 select-pane -T "Backend"
 send "sleep 5 && roslaunch fetch_vr_backend backend.launch" C-m
 split-window -v
-select-pane -T "ESTOP"
-send "rostopic pub --once /enable_software_runstop std_msgs/Bool 'true'"
+select-pane -T "Reset"
+send "roscd fetch_vr_backend && cd scripts" C-m
+
 
 set-option -g mouse on
 
