fix reset for nav. add estop script

--- a/config/study.tmux.conf
+++ b/config/study.tmux.conf
@@ -3,7 +3,7 @@ new-window
 split-window -v
 
 select-pane -D "ESTOP"
-send "rostopic pub --once /enable_software_runstop std_msgs/Bool 'true'"
+send "bash estop.bash" C-m
 
 select-pane -U
 split-window -h
