fix estop tmux panel

--- a/config/study.tmux.conf
+++ b/config/study.tmux.conf
@@ -3,7 +3,7 @@ new-window
 split-window -v
 
 select-pane -D "ESTOP"
-send "send "bash estop.bash" C-m
+send "roscd fetch_vr_backend && cd scripts && bash estop.bash" C-m
 
 select-pane -U
 split-window -h
