jordan's throttled cloud

--- a/config/study.tmux.conf
+++ b/config/study.tmux.conf
@@ -18,6 +18,7 @@ send " roslaunch fetch_moveit_config move_group.launch" C-m
 # top right panel
 select-pane -R
 select-pane -T "Backend"
+send "roscd fetch_vr_backend && cd scripts && bash throttle.bash &" C-m
 send "sleep 5 && roslaunch fetch_vr_backend backend.launch" C-m
 split-window -v
 select-pane -T "Reset"
